# example_codemeter

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  CMakeSettings.json  README.md
debug/: .dockerignore  .env  debug_windows.docker  docker-compose-debug.yaml
debug/visual_studio/remote_debug/: remote_debug.sln  remote_debug.vcxproj
doc/src/: index.md
src/: codemeter_example.cpp  codemeter_example.h  main.cpp
